@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-10-06T00:51:35Z",
-  "count_outdated" : 1424,
-  "uniques_outdated" : 945,
-  "count" : 1436,
-  "uniques" : 957,
+  "timestamp" : "2025-10-07T00:50:28Z",
+  "count_outdated" : 1425,
+  "uniques_outdated" : 946,
+  "count" : 1437,
+  "uniques" : 958,
   "clones" : [
-    {
-      "timestamp": "2025-09-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-24T00:00:00Z",
       "count": 1,
@@ -106,6 +97,15 @@
     },
     {
       "timestamp": "2025-10-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-10-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
