@@ -1,12 +1,7 @@
 {
   "count": 12,
-  "uniques": 2,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2025-09-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-09-24T00:00:00Z",
       "count": 1,
@@ -59,6 +54,11 @@
     },
     {
       "timestamp": "2025-10-05T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-10-06T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
