@@ -1,3 +1,12 @@
+2025-10-07T00:50:28Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18298648187 # 789
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-07
+* notice: last 14d: unq all: 3 12
+* notice: prev accum: outdated-unq outdated-all / unq all: 945 1424 / 957 1436
+* notice: next accum: outdated-unq outdated-all / unq all: 946 1425 / 958 1437
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-09-23] / [2025-10-06]
+
 2025-10-06T00:51:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/18266878051 # 788
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-10-06
